- Added prototype of a fix to the align of the loading.

--- a/fcc-twitch/css/style.css
+++ b/fcc-twitch/css/style.css
@@ -5,3 +5,7 @@
 .white-button{
     color: white;
 }
+
+.loading{
+    position: fixed;
+}
